--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,3 +79,29 @@ header .flex {
   font-size: 2rem;
   margin: 0.67em 0;
 }
+
+/*Icons*/
+
+.supporting {
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin: 3rem;
+  width: 5rem;
+  height: 8rem;
+}
+
+.icon img {
+  width: 5rem;
+  margin-bottom: 1rem;
+}
+
+.icon img.paper-icon {
+    width: 3.5rem;
