--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -133,3 +133,16 @@ header .flex {
 }
 
 /*Footer*/
+
+footer {
+  display: flex;
+  background-color: azure;
+  align-items: center;
+  padding: 4rem 2rem;
+}
+
+footer img {
+  margin-left: 2rem;
+  margin-right: 1rem;
+  height: 1.5rem;
+}
